aca/artifacts/aks/invoice-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-agent
  namespace: agent-platform
spec:
  replicas: 1

  selector:
    matchLabels:
      app: invoice-agent

  template:
    metadata:
      labels:
        app: invoice-agent
        azure.workload.identity/use: "true"

    spec:
      serviceAccountName: invoice-agent

      tolerations:
      - key: "CriticalAddonsOnly"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"

      containers:
      - name: invoice-agent
        image: "#ACR_ACA_NAME#.azurecr.io/invoice-agent:#Tag#"
        imagePullPolicy: Always

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
